@@ -1,3 +1,8 @@
+2013-08-21  Carl Hetherington  <cth@carlh.net>
+
+	* Hack around wildly-expanding warnings
+	text on Linux.
+
 2013-08-20  Carl Hetherington  <cth@carlh.net>
 
 	* Version 0.124 released.
